Alignment and spacing fixes. [Amends #57]

--- a/_scss/base/_shell.scss
+++ b/_scss/base/_shell.scss
@@ -37,7 +37,7 @@
   }
 
   @include media($XL) {
-    @include span-columns(9);
+    @include span-columns(8);
   }
 }
 
@@ -47,7 +47,7 @@
   }
 
   @include media($XL) {
-    @include span-columns(3);
+    @include span-columns(4);
   }
 
   .usajobs-content-gutter {
