--- a/css/usajobs-design-system-components.css
+++ b/css/usajobs-design-system-components.css
@@ -15379,6 +15379,30 @@ html {
   }
 }
 
+@media screen and (min-width: 37.5em) {
+  .usajobs-joa-intro__details-container {
+    float: left;
+    display: block;
+    margin-right: 4.8291579146%;
+    width: 47.5854210427%;
+  }
+  .usajobs-joa-intro__details-container:last-child {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 62em) {
+  .usajobs-joa-intro__details-container {
+    float: left;
+    display: block;
+    margin-right: 2.3576515979%;
+    width: 65.8807828007%;
+  }
+  .usajobs-joa-intro__details-container:last-child {
+    margin-right: 0;
+  }
+}
+
 .usajobs-joa-intro__details {
   display: block;
   margin: 0;
@@ -15399,33 +15423,14 @@ html {
   display: none;
 }
 
-@media screen and (min-width: 37.5em) {
-  .usajobs-joa-intro__details {
-    float: left;
-    display: block;
-    margin-right: 4.8291579146%;
-    width: 47.5854210427%;
-  }
-  .usajobs-joa-intro__details:last-child {
-    margin-right: 0;
-  }
-}
-
 @media screen and (min-width: 62em) {
   .usajobs-joa-intro__details {
     float: left;
     display: block;
     margin-right: 2.3576515979%;
-    width: 31.7615656014%;
+    width: 48.821174201%;
   }
   .usajobs-joa-intro__details:last-child {
-    margin-right: 0;
-  }
-}
-
-@media screen and (min-width: 37.5em) {
-  .usajobs-joa-intro__details:last-child {
-    float: right;
     margin-right: 0;
   }
 }
@@ -17625,7 +17630,7 @@ html {
 
 .usajobs-joa-actions {
   margin-bottom: 3rem;
-  padding: 1.5rem;
+  padding: 1.5rem 1.5rem 0;
   text-align: center;
   background-color: #f1f1f1;
 }
@@ -17638,6 +17643,7 @@ html {
 
 @media screen and (min-width: 37.5em) {
   .usajobs-joa-actions {
+    padding-bottom: 1.5rem;
     text-align: left;
   }
 }
@@ -17645,6 +17651,12 @@ html {
 @media screen and (min-width: 30em) {
   .usajobs-joa-actions__apply {
     width: 80%;
+  }
+}
+
+@media screen and (min-width: 62em) {
+  .usajobs-joa-actions__apply {
+    width: 100%;
   }
 }
 
@@ -17660,6 +17672,24 @@ html {
   }
 }
 
+@media screen and (min-width: 62em) {
+  .usajobs-joa-actions__col {
+    float: left;
+    display: block;
+    margin-right: 2.3576515979%;
+    width: 31.7615656014%;
+  }
+  .usajobs-joa-actions__col:last-child {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 62em) {
+  .usajobs-joa-actions__col:last-child {
+    float: right;
+  }
+}
+
 .usajobs-joa-actions__col .usajobs-joa-actions__print,
 .usajobs-joa-actions__col .usajobs-joa-actions__share,
 .usajobs-joa-actions__col .usajobs-joa-actions__save {
@@ -17667,6 +17697,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 31.7615656014%;
+  padding: 1.5rem;
   text-align: center;
   color: #212121;
 }
